--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New year new me 2024</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <main>
+      <section class="intro">
+        <div class="intro-container">
+          <h1 class="intro-title">All Thinks Are Possible If You believe</h1>
+          <p class="intro-description">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomized words
+          </p>
+          <button class="btn-primary">Contact Us</button>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
