--- a/index.html
+++ b/index.html
@@ -19,6 +19,65 @@
           <button class="btn-primary">Contact Us</button>
         </div>
       </section>
+      <section class="failures">
+        <img src="images/person.png" alt="" />
+        <div class="failures-container">
+          <h1 class="failures-title">My failures of previous year</h1>
+          <p class="failures-description">
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClinton.
+          </p>
+          <ul>
+            <li>Contrary to popular belief, is not simply.</li>
+            <li>Contrary to popular belief.</li>
+            <li>Contrary to popular , is not simply.</li>
+            <li>Contrary to popular belief, is not simply.</li>
+            <li>Contrary to popular simply.</li>
+          </ul>
+        </div>
+      </section>
+      <section class="plans">
+        <h1 class="plans-title">My Plans</h1>
+        <div class="plans-info-container">
+          <div class="plans-info">
+            <img src="images/icons/web.png" alt="web" class="plans-info-icon" />
+            <h2 class="plans-info-title">Web Development</h2>
+            <p class="plans-info-description">I want to start</p>
+          </div>
+          <div class="plans-info">
+            <img
+              src="images/icons/js.png"
+              alt="JavaScript"
+              class="plans-info-icon"
+            />
+            <h2 class="plans-info-title">Javascript</h2>
+            <p class="plans-info-description">I want to learn</p>
+          </div>
+          <div class="plans-info">
+            <img
+              src="images/icons/smoke.png"
+              alt="no smoke"
+              class="plans-info-icon"
+            />
+            <h2 class="plans-info-title">Smoking Habit</h2>
+            <p class="plans-info-description">I want to end</p>
+          </div>
+          <div class="plans-info">
+            <img
+              src="images/icons/ecom.png"
+              alt="e-commerce"
+              class="plans-info-icon"
+            />
+            <h2 class="plans-info-title">E-commerce</h2>
+            <p class="plans-info-description">I want to develop</p>
+          </div>
+        </div>
+        <div class="motivation">
+          <h1 class="motivation-title">Always keep a positive mindset</h1>
+          <button class="btn-secondary">Call Now</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
