--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         </div>
       </section>
       <section class="failures">
-        <img src="images/person.png" alt="" />
+        <div>
+          <img src="images/person.png" alt="" />
+        </div>
         <div class="failures-container">
           <h1 class="failures-title">My failures of previous year</h1>
           <p class="failures-description">
@@ -79,5 +81,30 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="future-container">
+        <h1 class="future-title">Future</h1>
+        <p class="future-text">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomized words
+          <br /><br />
+          Email : info@gmail.com
+          <br /><br />
+          Phone : 01500 00 00 00
+          <br /><br />
+        </p>
+        <div class="social">
+          <a href="#"><img src="images/icons/fb.png" alt="fb" /></a>
+          <a href="#"><img src="images/icons/twitter.png" alt="twitter" /></a
+          ><a href="#"><img src="images/icons/youtube.png" alt="youtube" /></a>
+        </div>
+      </div>
+      <div class="contact-us">
+        <h3 class="contact-title">Subscribe</h3>
+        <input type="email" name="" id="" placeholder="Your email" />
+        <button class="btn-secondary">Subscribe</button>
+      </div>
+    </footer>
   </body>
 </html>
